<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/images"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/containerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="90dp"
            android:contentDescription="@string/logo_image_description"
            app:srcCompat="@drawable/logo"
            tools:ignore="ImageContrastCheck" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="215dp"
            android:background="@color/black"
            app:cardCornerRadius="35dp"
            tools:ignore="NotSibling">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                android:background="@color/koyuBej"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logo">

                <TextView
                    android:id="@+id/txtHosGeldiniz"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hosgeldiniz"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txtEpostaYazısı"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="50dp"
                    android:text="@string/eposta"
                    android:textColor="@color/white"
                    android:textSize="11sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtHosGeldiniz"
                    tools:ignore="TextContrastCheck" />

                <EditText
                    android:id="@+id/etGirisEmail"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:autofillHints=""
                    android:background="@drawable/girissayfasiedittextarkaplan"
                    android:hint="@string/ornekmail"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:padding="15dp"
                    android:paddingEnd="100dp"
                    android:textColor="@color/black"
                    android:textSize="11sp"
                    android:textColorHint="#455A64"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtEpostaYazısı"
                    tools:ignore="RtlSymmetry" />


                <TextView
                    android:id="@+id/txtParolaYazısı"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/parola"
                    android:textSize="11sp"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etGirisEmail"
                    tools:ignore="TextContrastCheck" />

                <EditText
                    android:id="@+id/etGirisParola"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:autofillHints=""
                    android:background="@drawable/girissayfasiedittextarkaplan"
                    android:hint="@string/yildiz"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:textSize="11sp"
                    android:padding="15dp"
                    android:paddingEnd="100dp"
                    android:textColor="@color/black"
                    android:textColorHint="#455A64"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtParolaYazısı"
                    tools:ignore="RtlSymmetry" />
                <CheckBox
                    android:id="@+id/beniHatırla"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="8dp"
                    android:buttonTint="@color/logo"
                    android:minHeight="48dp"
                    android:padding="10dp"
                    android:text="@string/beni_hatirla"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.004"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etGirisParola"
                    tools:ignore="TextContrastCheck" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnGirisYap"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/girissayfasigirisyapbtnedit"
                    android:text="@string/btnGirisYap"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/beniHatırla"
                    tools:ignore="UnknownId" />

                <Button
                    android:id="@+id/btnSifremiUnuttum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="80dp"
                    android:background="@android:color/transparent"
                    android:text="@string/sifremi_unuttum"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnGirisYap"
                    tools:ignore="TextContrastCheck" />

                <Button
                    android:id="@+id/btnKayitOl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:text="@string/kayit_ol"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnSifremiUnuttum"
                    tools:ignore="TextContrastCheck" />
                <Button
                    android:id="@+id/btnDatabase"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:text="Database"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnKayitOl"
                    tools:ignore="TextContrastCheck" />



            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>